--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,7 @@
   <p>If you have any questions, feel free to reach out to us!</p>
 
   <p>Email: <a href="mailto:memepediarebirth@gmail.com" style="color: #cc5500;">memepediarebirth@gmail.com</a></p>
+    <p>Memepedia Bot: <a href="mailto:memepediabot@shapes.inc" style="color: #cc5500;">memepediabot@shapes.inc</a></p>
   
   <p>Join the conversation on Discord:</p>
   <p>Magic Dippy Egg: <strong>@magicdippyegg</strong></p>
