--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
   <p>Original Desktop Goose by <a href="https://samperson.itch.io/desktop-goose" target="_blank" style="color: #ff6600;">Samperson</a></p>
 </main>
 
+<iframe 
+  src="https://www.youtube.com/subscribe_embed?usegapi=1&channel=MemepediaRebirth&channelid=UCDnAt8Gq51HzhjLj0IvJv_A&layout=full&theme=default"
+  style="border: 0; height: 48px; width: 180px; overflow: hidden;"
+  scrolling="no"
+  frameborder="0">
+</iframe>
+
 <br><br>
 
 <footer>
