and i wonder if you know what it means what it seems

--- a/gallery.html
+++ b/gallery.html
@@ -95,6 +95,7 @@
   <img src="memes/meme25.gif" alt="Meme25">
   <img src="memes/meme26.png" alt="Meme26">
   <img src="memes/meme27.jpg" alt="Meme27">
+  <img src="memes/meme28.jpg" alt="Meme27">
   
   
   
