--- a/gallery.html
+++ b/gallery.html
@@ -95,7 +95,8 @@
   <img src="memes/meme25.gif" alt="Meme25">
   <img src="memes/meme26.png" alt="Meme26">
   <img src="memes/meme27.jpg" alt="Meme27">
-  <img src="memes/meme28.jpg" alt="Meme27">
+  <img src="memes/meme28.jpg" alt="Meme28">
+  <img src="memes/meme29.jpeg" alt="Meme29">
   
   
   
