--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -205,6 +205,12 @@ footer {
         Your browser does not support videos.
       </video>
     </div>
+										    <div class="video-item">
+			      <video controls>
+        <source src="videos/video16.mp4" type="video/mp4">
+        Your browser does not support videos.
+      </video>
+    </div>
   </div>
 </main>
 
