--- a/comments.html
+++ b/comments.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Memepedia Comments</title>
-  <link rel="icon" href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true">
+  <link rel="icon" href="/MEMEPEDIA-CONTENT/icon.png">
   <style>
     body {
       font-family: 'Arial', sans-serif;
