update so title will be good

--- a/foryou.html
+++ b/foryou.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>For You - Memepedia: Rebirth</title>
+    <meta property="og:site_name" content="Memepedia Rebirth">
+	<meta name="application-name" content="Memepedia Rebirth">
   <link rel="icon" href="/MEMEPEDIA-CONTENT/icon.png">
   <style>
     body {
