--- a/comments.html
+++ b/comments.html
@@ -6,7 +6,7 @@
   <title>Memepedia Comments</title>
     <meta property="og:site_name" content="Memepedia Rebirth">
 	<meta name="application-name" content="Memepedia Rebirth">
-  <link rel="icon" href="/MEMEPEDIA-CONTENT/icon.png">
+<link rel="icon" href="/MEMEPEDIA-CONTENT/icon.png" type="image/png">
   <style>
     body {
       font-family: 'Arial', sans-serif;
