hmmm i wonder what could of i updated

--- a/gallery.html
+++ b/gallery.html
@@ -140,6 +140,7 @@
   <img class="meme-thumbnail" src="memes/meme27.jpg" alt="Meme27" loading="lazy" data-fullsize="memes/meme27.jpg">
   <img class="meme-thumbnail" src="memes/meme28.jpg" alt="Meme28" loading="lazy" data-fullsize="memes/meme28.jpg">
   <img class="meme-thumbnail" src="memes/meme29.jpeg" alt="Meme29" loading="lazy" data-fullsize="memes/meme29.jpeg">
+  <img class="meme-thumbnail" src="memes/meme30.png" alt="Meme29" loading="lazy" data-fullsize="memes/meme30.png">
 </main>
 
 <!-- Lightbox container -->
