--- a/gallery.html
+++ b/gallery.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+][=<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -140,7 +140,8 @@
   <img class="meme-thumbnail" src="memes/meme27.jpg" alt="Meme27" loading="lazy" data-fullsize="memes/meme27.jpg">
   <img class="meme-thumbnail" src="memes/meme28.jpg" alt="Meme28" loading="lazy" data-fullsize="memes/meme28.jpg">
   <img class="meme-thumbnail" src="memes/meme29.jpeg" alt="Meme29" loading="lazy" data-fullsize="memes/meme29.jpeg">
-  <img class="meme-thumbnail" src="memes/meme30.png" alt="Meme29" loading="lazy" data-fullsize="memes/meme30.png">
+  <img class="meme-thumbnail" src="memes/meme30.png" alt="Meme30" loading="lazy" data-fullsize="memes/meme30.png">
+  <img class="meme-thumbnail" src="memes/meme30.png" alt="Meme31" loading="lazy" data-fullsize="memes/meme31.png">
 </main>
 
 <!-- Lightbox container -->
