--- a/gallery.html
+++ b/gallery.html
@@ -142,6 +142,7 @@
   <img class="meme-thumbnail" src="memes/meme29.jpeg" alt="Meme29" loading="lazy" data-fullsize="memes/meme29.jpeg">
   <img class="meme-thumbnail" src="memes/meme30.png" alt="Meme30" loading="lazy" data-fullsize="memes/meme30.png">
   <img class="meme-thumbnail" src="memes/meme31.png" alt="Meme31" loading="lazy" data-fullsize="memes/meme31.png">
+  <img class="meme-thumbnail" src="memes/meme32.png" alt="Meme32" loading="lazy" data-fullsize="memes/meme32.png">
 </main>
 
 <!-- Lightbox container -->
