--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <body>
 
 <header>
-  <link rel="preload" href="/MEMEPEDIA-CONTENT/icon_smaller.jpg" as="image">
+  <img src="/MEMEPEDIA-CONTENT/icon_smaller.jpg" alt="Memepedia Icon">
   <h1>Memepedia: Rebirth</h1>
   <p>Welcome to MEMEPEDIA! A space for memes, art, and creativity. Join, have fun, and be respectful! <a href="about" style="color: #000000;">Find out more</a> </p>
 </header>
