update name of #logical potato to guh

--- a/chat.html
+++ b/chat.html
@@ -131,9 +131,9 @@
 	
 	<br><br><br><br><br>
   
-  <footer>
-    Created by #1 Logical Potato, with help from Magic Dippy Egg | Memepedia: Rebirth
-  </footer>
+<footer>
+  Created by Guh, with help from Magic Dippy Egg | Memepedia: Rebirth
+</footer>
   <script>
     async function fetchMessages() {
       try {
