--- a/chatbot.html
+++ b/chatbot.html
@@ -132,9 +132,9 @@
   <br> <br>
   
   
-  <footer>
-    Created by #1 Logical Potato, with help from Magic Dippy Egg | Memepedia: Rebirth
-  </footer>
+<footer>
+  Created by Guh, with help from Magic Dippy Egg | Memepedia: Rebirth
+</footer>
 
   <script>
     const messagesContainer = document.getElementById("messagesContainer");
