--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
   
   <p>Join the conversation on Discord:</p>
   <p>Magic Dippy Egg: <strong>@magicdippyegg</strong></p>
-  <p>#1 Logical Potato: <strong>@superdino4679</strong></p>
+  <p>Guh: <strong>@superdino4679</strong></p>
 
   <a href="https://docs.google.com/forms/d/e/1FAIpQLSfSlSxoN22GNaM6ReOzaQdK8KgUvVVNXeNLmC48OXQu5O0QuQ/viewform?usp=header" class="button" target="_blank">Submit Feedback</a>
 
