--- a/faq.html
+++ b/faq.html
@@ -136,7 +136,7 @@
 </main>
 
 <footer>
-  Created by #1 Logical Potato, with help from Magic Dippy Egg | Memepedia: Rebirth
+  Created by Guh, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
 
 <script>
