--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -221,7 +221,7 @@ footer {
 <br><br><br><br>
 
 <footer>
-  Created by #1 Logical Potato, with help from Magic Dippy Egg | Memepedia: Rebirth
+  Created by Guh, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
 
 </body>
