preparing for the big change

--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
   <title>Page Not Found</title>
     <meta property="og:site_name" content="Memepedia Rebirth">
 	<meta name="application-name" content="Memepedia Rebirth">
-    <link rel="icon" href="/MEMEPEDIA-CONTENT/icon.png">
+    <link rel="icon" href="/icon.png">
   <style>
     body {
       background-color: #000000;
