--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   <title>Contact Us</title>
     <meta property="og:site_name" content="Memepedia Rebirth">
 	<meta name="application-name" content="Memepedia Rebirth">
-<link rel="icon" href="/MEMEPEDIA-CONTENT/icon.png" type="image/png">
+<link rel="icon" href="/icon.png" type="image/png">
   <style>
     body {
       background-color: #000000;
