--- a/foryou.html
+++ b/foryou.html
@@ -6,7 +6,7 @@
   <title>For You - Memepedia: Rebirth</title>
     <meta property="og:site_name" content="Memepedia Rebirth">
 	<meta name="application-name" content="Memepedia Rebirth">
-<link rel="icon" href="/MEMEPEDIA-CONTENT/icon.png" type="image/png">
+<link rel="icon" href="/icon.png" type="image/png">
   <style>
     body {
       font-family: 'Arial', sans-serif;
