--- a/404.html
+++ b/404.html
@@ -43,7 +43,7 @@
 
   <h1>Oops!</h1>
   <p>Looks like you ended up in the wrong spot.</p>
-  <a href="https://magicdippyegg.github.io/MEMEPEDIA-CONTENT/" class="button">Go Back Home</a>
+  <a href="https://memepedia.pages.dev/" class="button">Go Back Home</a>
 
 </body>
 </html>
