give em their links

--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -99,111 +99,111 @@ footer {
   <div class="video-gallery">
     <div class="video-item">
       <video controls>
-        <source src="videos/video1.mp4" type="video/mp4">
+        <source src="https://memepedia-download.onrender.com/videos/video1.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </div>
 
     <div class="video-item">
       <video controls>
-        <source src="videos/video2.mp4" type="video/mp4">
+        <source src="https://memepedia-download.onrender.com/videos/video2.mp4" type="video/mp4">
         Your browser does not support videos.
       </video>
     </div>
 
     <div class="video-item">
       <video controls>
-        <source src="videos/video3.mp4" type="video/mp4">
+        <source src="https://memepedia-download.onrender.com/videos/video3.mp4" type="video/mp4">
         Your browser does not support videos.
       </video>
     </div>
 
     <div class="video-item">
       <video controls>
-        <source src="videos/video4.mp4" type="video/mp4">
+        <source src="https://memepedia-download.onrender.com/videos/video4.mp4" type="video/mp4">
         Your browser does not support videos.
       </video>
     </div>
 	
 	    <div class="video-item">
       <video controls>
-        <source src="videos/video5.mp4" type="video/mp4">
+        <source src="https://memepedia-download.onrender.com/videos/video5.mp4" type="video/mp4">
         Your browser does not support videos.
       </video>
     </div>
 	
 		    <div class="video-item">
       <video controls>
-        <source src="videos/video6.mp4" type="video/mp4">
+        <source src="https://memepedia-download.onrender.com/videos/video6.mp4" type="video/mp4">
         Your browser does not support videos.
       </video>
     </div>
 	
 			    <div class="video-item">
       <video controls>
-        <source src="videos/video7.mp4" type="video/mp4">
+        <source src="https://memepedia-download.onrender.com/videos/video7.mp4" type="video/mp4">
         Your browser does not support videos.
       </video>
     </div>
 	
 				    <div class="video-item">
       <video controls>
-        <source src="videos/video8.mp4" type="video/mp4">
+        <source src="https://memepedia-download.onrender.com/videos/video8.mp4" type="video/mp4">
         Your browser does not support videos.
       </video>
     </div>
 	
 					    <div class="video-item">
       <video controls>
-        <source src="videos/video9.mov" type="video/mp4">
+        <source src="https://memepedia-download.onrender.com/videos/video9.mov" type="video/mp4">
         Your browser does not support videos.
       </video>
     </div>
 	
 						    <div class="video-item">
       <video controls>
-        <source src="videos/video10.mp4" type="video/mp4">
+        <source src="https://memepedia-download.onrender.com/videos/video10.mp4" type="video/mp4">
         Your browser does not support videos.
       </video>
     </div>
 	
 							    <div class="video-item">
 	      <video controls>
-        <source src="videos/video11.mp4" type="video/mp4">
+        <source src="https://memepedia-download.onrender.com/videos/video11.mp4" type="video/mp4">
         Your browser does not support videos.
       </video>
     </div>
 	
 							    <div class="video-item">
 		      <video controls>
-        <source src="videos/video12.mov" type="video/mp4">
+        <source src="https://memepedia-download.onrender.com/videos/video12.mov" type="video/mp4">
         Your browser does not support videos.
       </video>
     </div>
 	
 							    <div class="video-item">
 			      <video controls>
-        <source src="videos/video13.mov" type="video/mp4">
+        <source src="https://memepedia-download.onrender.com/videos/video13.mov" type="video/mp4">
         Your browser does not support videos.
       </video>
     </div>
 	
 								    <div class="video-item">
 			      <video controls>
-        <source src="videos/video14.mp4" type="video/mp4">
+        <source src="https://memepedia-download.onrender.com/videos/video14.mp4" type="video/mp4">
         Your browser does not support videos.
       </video>
     </div>
 	
 									    <div class="video-item">
 			      <video controls>
-        <source src="videos/video15.mp4" type="video/mp4">
+        <source src="https://memepedia-download.onrender.com/videos/video15.mp4" type="video/mp4">
         Your browser does not support videos.
       </video>
     </div>
 										    <div class="video-item">
 			      <video controls>
-        <source src="videos/video16.mp4" type="video/mp4">
+        <source src="https://memepedia-download.onrender.com/videos/video16.mp4" type="video/mp4">
         Your browser does not support videos.
       </video>
     </div>
