--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </head>
 <body>
 
-  <h1>This the the Memepedia download server>
+  <h1>This the the Memepedia download server</p>
   <p>This is where most of the files for Memepedia are stored</p>
   <a href="https://memepedia.pages.dev/" class="button">Go To Memepedia</a>
 
