i think we good jsu tgotta fix the discord chat system now

--- a/faq.html
+++ b/faq.html
@@ -105,7 +105,7 @@
 
   <div class="faq-item">
     <h3>Where can I download Meme Goose?</h3>
-    <p>You can download Meme Goose from the <a href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/raw/refs/heads/main/Download/Meme%20Goose.msi" target="_blank" class="button">Meme Goose Download</a> link provided in the announcements section of our Discord server.</p>
+    <p>You can download Meme Goose from the <a href="https://memepedia-download.onrender.com/Meme%20Goose.msi" target="_blank" class="button">Meme Goose Download</a> link provided in the announcements section of our Discord server.</p>
   </div>
 
   <div class="faq-item">
