place warning banners

--- a/gallery.html
+++ b/gallery.html
@@ -108,6 +108,14 @@
 <header>
   <h1>Meme Gallery</h1>
 </header>
+<div style="width: 100%; background-color: #fff4e5; border-bottom: 2px solid #ffcc80; padding: 12px 0; text-align: center; font-family: system-ui, sans-serif;">
+  <strong style="color: #b00020; font-size: 1.1em;">⚠️ This is an outdated version of the site.</strong>
+  <div style="margin-top: 4px; color: #333;">
+    This page is no longer updated. Please visit the latest site at
+    <a href="https://memepedia.pages.dev/" style="color: #0066cc; text-decoration: underline;">memepedia.pages.dev</a>.
+  </div>
+</div>
+
 
 <main>
   <!-- Memes with lazy loading and lightbox functionality -->
