--- a/chatbot.html
+++ b/chatbot.html
@@ -116,6 +116,14 @@
     <h1>Memepedia AI Chatbot</h1>
     <img src="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true" alt="Memepedia Logo" />
   </header>
+  <div style="width: 100%; background-color: #fff4e5; border-bottom: 2px solid #ffcc80; padding: 12px 0; text-align: center; font-family: system-ui, sans-serif;">
+  <strong style="color: #b00020; font-size: 1.1em;">⚠️ This is an outdated version of the site. (And A Hidden Page)</strong>
+  <div style="margin-top: 4px; color: #333;">
+    This page is no longer updated. Please visit the latest site at
+    <a href="https://memepedia.pages.dev/" style="color: #0066cc; text-decoration: underline;">memepedia.pages.dev</a>.
+  </div>
+</div>
+
   <main>
     <a href="index" class="button">Back to Home</a>
     <div class="chat-container">
