--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,13 @@
   </style>
 </head>
 <body>
+  <strong style="color: #b00020; font-size: 1.1em;">⚠️ This is an outdated version of the site.</strong>
+  <div style="margin-top: 4px; color: #333;">
+    This page is no longer updated. Please visit the latest site at
+    <a href="https://memepedia.pages.dev/" style="color: #0066cc; text-decoration: underline;">memepedia.pages.dev</a>.
+  </div>
+</div>
+
 
   <h1>Contact Us</h1>
   <p>If you have any questions, feel free to reach out to us!</p>
