--- a/index.html
+++ b/index.html
@@ -76,6 +76,17 @@
   <p>Welcome to MEMEPEDIA! A space for memes, art, and creativity. Join, have fun, and be respectful! <a href="about" style="color: #000000;">Find out more</a> </p>
 </header>
 
+<div style="width: 100%; background-color: #fff4e5; border-bottom: 2px solid #ffcc80; padding: 12px 0; text-align: center; font-family: system-ui, sans-serif;">
+  <strong style="color: #b00020; font-size: 1.1em;">⚠️ This is an outdated version of the site.</strong>
+  <div style="margin-top: 4px; color: #333;">
+    This page is no longer updated. Please visit the latest site at
+    <a href="https://memepedia.pages.dev/" style="color: #0066cc; text-decoration: underline;">memepedia.pages.dev</a>.
+  </div>
+</div>
+
+
+
+
 <main>
   <h2>Join the Community</h2>
   <p>Come hang out with meme lovers, artists, and creative souls!</p>
