update from "Guh" to "Goobert"

--- a/chatbot.html
+++ b/chatbot.html
@@ -133,7 +133,7 @@
   
   
 <footer>
-  Created by Guh, with help from Magic Dippy Egg | Memepedia: Rebirth
+  Created by Goobert, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
 
   <script>
