--- a/gallery.html
+++ b/gallery.html
@@ -160,7 +160,7 @@
 <a href="gallery/videos" class="button">Go to videos</a>
 
 <footer>
-  Created by Guh, with help from Magic Dippy Egg | Memepedia: Rebirth
+  Created by Goobert, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
 
 <script>
