--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
 </main>
 
 <footer>
-  Created by Guh, with help from Magic Dippy Egg | Memepedia: Rebirth
+  Created by Goobert, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
 
 </body>
