--- a/chat.html
+++ b/chat.html
@@ -132,7 +132,7 @@
 	<br><br><br><br><br>
   
 <footer>
-  Created by Guh, with help from Magic Dippy Egg | Memepedia: Rebirth
+  Created by Goobert, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
   <script>
     async function fetchMessages() {
