--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <br><br>
 
 <footer>
-  Created by Guh, with help from Magic Dippy Egg | Memepedia: Rebirth  <a href="contact" target="_blank" style="color: #ff6600;">Contact Us</a>
+  Created by Goobert, with help from Magic Dippy Egg | Memepedia: Rebirth  <a href="contact" target="_blank" style="color: #ff6600;">Contact Us</a>
 </footer>
 
 </body>
