--- a/404.html
+++ b/404.html
@@ -2,55 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Page Not Found</title>
-    <meta property="og:site_name" content="Memepedia Rebirth">
-	<meta name="application-name" content="Memepedia Rebirth">
-    <link rel="icon" href="/MEMEPEDIA-CONTENT/icon.png">
-  <style>
-    body {
-      background-color: #000000;
-      color: #ffffff;
-      font-family: 'Arial', sans-serif;
-      text-align: center;
-      padding: 100px 20px;
-    }
-    h1 {
-      font-size: 60px;
-      margin-bottom: 20px;
-      color: #cc5500; /* dark orange */
-    }
-    p {
-      font-size: 20px;
-      margin-bottom: 40px;
-    }
-    a.button {
-      display: inline-block;
-      padding: 15px 30px;
-      background-color: #cc5500;
-      color: white;
-      text-decoration: none;
-      font-size: 18px;
-      border-radius: 8px;
-      transition: background-color 0.3s;
-    }
-    a.button:hover {
-      background-color: #b34700;
-    }
-  </style>
+  <title>Redirecting...</title>
+  <meta http-equiv="refresh" content="0; url=https://memepedia.pages.dev/">
+  <script>
+    // Redirect keeping the path
+    const currentPath = window.location.pathname;
+    const newUrl = "https://memepedia.pages.dev" + currentPath;
+    window.location.replace(newUrl);
+  </script>
 </head>
-
 <body>
-  <strong style="color: #b00020; font-size: 1.1em;">⚠️ This is an outdated version of the site.</strong>
-  <div style="margin-top: 4px; color: #333;">
-    This page is no longer updated. Please visit the latest site at
-    <a href="https://memepedia.pages.dev/" style="color: #0066cc; text-decoration: underline;">memepedia.pages.dev</a>.
-  </div>
-<body>
-
-  <h1>Oops!</h1>
-  <p>Looks like you ended up in the wrong spot.</p>
-  <a href="https://magicdippyegg.github.io/MEMEPEDIA-CONTENT/" class="button">Go Back Home</a>
-
+  <p>If you are not redirected automatically, <a id="redirectLink" href="#">click here</a>.</p>
+  <script>
+    document.getElementById("redirectLink").href = newUrl;
+  </script>
 </body>
 </html>
