--- a/chatbot.html
+++ b/chatbot.html
@@ -136,63 +136,63 @@
   Created by Goobert, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
 
-  <script>
-    const messagesContainer = document.getElementById("messagesContainer");
+<script>
+  const messagesContainer = document.getElementById("messagesContainer");
 
-    function appendMessage(content, author = "user") {
-      const messageDiv = document.createElement("div");
-      messageDiv.classList.add("message");
-      const authorSpan = document.createElement("span");
-      authorSpan.classList.add("author");
-      authorSpan.textContent = author === "user" ? "You" : "Memepedia Bot";
-      const contentSpan = document.createElement("span");
-      contentSpan.classList.add("content");
-      contentSpan.textContent = content;
-      messageDiv.appendChild(authorSpan);
-      messageDiv.appendChild(contentSpan);
-      messagesContainer.appendChild(messageDiv);
-      messagesContainer.scrollTop = messagesContainer.scrollHeight;
-    }
+  function appendMessage(content, author = "user") {
+    const messageDiv = document.createElement("div");
+    messageDiv.classList.add("message");
+    const authorSpan = document.createElement("span");
+    authorSpan.classList.add("author");
+    authorSpan.textContent = author === "user" ? "You" : "Memepedia Bot";
+    const contentSpan = document.createElement("span");
+    contentSpan.classList.add("content");
+    contentSpan.textContent = content;
+    messageDiv.appendChild(authorSpan);
+    messageDiv.appendChild(contentSpan);
+    messagesContainer.appendChild(messageDiv);
+    messagesContainer.scrollTop = messagesContainer.scrollHeight;
+  }
 
-    async function sendMessage() {
-      const input = document.getElementById("userInput");
-      const userMessage = input.value.trim();
-      if (!userMessage) return;
+  async function sendMessage() {
+    const input = document.getElementById("userInput");
+    const userMessage = input.value.trim();
+    if (!userMessage) return;
 
-      appendMessage(userMessage, "user");
-      input.value = "";
+    appendMessage(userMessage, "user");
+    input.value = "";
 
-      try {
-        const response = await fetch("https://memepedia-backend.vercel.app/api/gemini-chat", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify({ message: userMessage })
-        });
+    try {
+      const response = await fetch("https://memepedia-backend.vercel.app/api/ai-chatbot", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({ message: userMessage })
+      });
 
-        if (!response.ok) {
-          throw new Error("Network response was not ok");
-        }
-
-        const data = await response.json();
-        const botReply = data?.candidates?.[0]?.content?.parts?.[0]?.text;
-
-        if (botReply) {
-          appendMessage(botReply, "bot");
-        } else {
-          appendMessage("No response from bot. Please try again.", "bot");
-        }
-      } catch (error) {
-        console.error("Error:", error);
-        appendMessage("Error: Something went wrong. Try again later.", "bot");
+      if (!response.ok) {
+        throw new Error("Network response was not ok");
       }
-    }
 
-    document.getElementById("sendMessage").addEventListener("click", sendMessage);
-    document.getElementById("userInput").addEventListener("keypress", function (e) {
-      if (e.key === "Enter") sendMessage();
-    });
-  </script>
+      const data = await response.json();
+      const botReply = data?.reply;
+
+      if (botReply) {
+        appendMessage(botReply, "bot");
+      } else {
+        appendMessage("No response from bot. Please try again.", "bot");
+      }
+    } catch (error) {
+      console.error("Error:", error);
+      appendMessage("Error: Something went wrong. Try again later.", "bot");
+    }
+  }
+
+  document.getElementById("sendMessage").addEventListener("click", sendMessage);
+  document.getElementById("userInput").addEventListener("keypress", function (e) {
+    if (e.key === "Enter") sendMessage();
+  });
+</script>
 </body>
 </html>
