--- a/faq.html
+++ b/faq.html
@@ -83,7 +83,6 @@
 <body class="faq-page">
 
 <header>
-  <img src="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true" alt="Memepedia Icon">
   <h1>FAQ - Memepedia: Rebirth</h1>
 </header>
 
@@ -127,6 +126,7 @@
   
   <br>
 
+<a href="support" class="button">View Support Page</a>
 
   <a href="https://docs.google.com/forms/d/e/1FAIpQLSd8OqrmgKo2NiqIsqb3T28rGhzvcmaqwlRA7LpsVgVVoSWyNQ/viewform?usp=header" class="button">Ask a question</a>
   
