hopefully this will make the new url appear in google search

--- a/support.html
+++ b/support.html
@@ -6,6 +6,7 @@
   <title>Support - Memepedia: Rebirth</title>
   <meta property="og:site_name" content="Memepedia Rebirth">
   <meta name="application-name" content="Memepedia Rebirth">
+  <link rel="canonical" href="https://memepedia.pages.dev/support" />
   <link rel="icon" href="icon_smaller.jpg" type="image/png">
   <style>
     body {
