--- a/chatbot.html
+++ b/chatbot.html
@@ -6,6 +6,7 @@
   <title>Memepedia AI Chatbot</title>
     <meta property="og:site_name" content="Memepedia Rebirth">
 	<meta name="application-name" content="Memepedia Rebirth">
+	<link rel="canonical" href="https://memepedia.pages.dev/chatbot" />
 <link rel="icon" href="icon_smaller.jpg" type="image/png">
   <style>
     body {
