--- a/faq.html
+++ b/faq.html
@@ -6,6 +6,7 @@
   <title>FAQ - Memepedia: Rebirth</title>
     <meta property="og:site_name" content="Memepedia Rebirth">
 	<meta name="application-name" content="Memepedia Rebirth">
+	<link rel="canonical" href="https://memepedia.pages.dev/faq" />
 <link rel="icon" href="icon_smaller.jpg" type="image/png">
   <style>
     body {
