--- a/support/old_meme_goose.html
+++ b/support/old_meme_goose.html
@@ -6,6 +6,7 @@
   <title>Important: Reinstall Meme Goose - Memepedia: Rebirth</title>
   <meta property="og:site_name" content="Memepedia Rebirth">
   <meta name="application-name" content="Memepedia Rebirth">
+  <link rel="canonical" href="https://memepedia.pages.dev/support/old_meme_goose" />
   <link rel="icon" href="/icon_smaller.jpg" type="image/png">
   <style>
     body {
