--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <p>Come hang out with meme lovers, artists, and creative souls!</p>
   <a href="https://discord.gg/yvCTUBHNks" class="button" target="_blank" >Join Our Discord</a>
   <a href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT" class="button" target="_blank">View GitHub Content</a>
-  <a href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/raw/refs/heads/main/Download/Meme%20Goose.msi" class="button" target="_blank">Download Meme Goose</a>
+  <a href="https://magicdippyegg.github.io/MEMEPEDIA-CONTENT/Download/Meme%20Goose.zip" class="button" target="_blank">Download Meme Goose</a>
   <a href="https://www.youtube.com/@MemepediaRebirth" class="button" target="_blank">YouTube Channel</a>
     <a href="https://www.tiktok.com/@memepedia.rebirth" class="button" target="_blank">TikTok Channel</a>
 	<a href="https://memepediaarchive.netlify.app/" class="button" target="_blank">Memepedia Archive</a>
