try to make google show the new url instead of the old one

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Memepedia: Rebirth</title>
   <meta property="og:site_name" content="Memepedia Rebirth">
 	<meta name="application-name" content="Memepedia Rebirth">
+	<link rel="canonical" href="https://memepedia.pages.dev/" />
 <link rel="icon" href="icon.png" type="image/png">
   <style>
     body {
