--- a/comments.html
+++ b/comments.html
@@ -6,6 +6,7 @@
   <title>Memepedia Comments</title>
     <meta property="og:site_name" content="Memepedia Rebirth">
 	<meta name="application-name" content="Memepedia Rebirth">
+	<link rel="canonical" href="https://memepedia.pages.dev/comments" />
 <link rel="icon" href="/MEMEPEDIA-CONTENT/icon.png" type="image/png">
   <style>
     body {
