--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -6,6 +6,7 @@
   <title>Video Gallery - Memepedia: Rebirth</title>
     <meta property="og:site_name" content="Memepedia Rebirth">
 	<meta name="application-name" content="Memepedia Rebirth">
+	<link rel="canonical" href="https://memepedia.pages.dev/gallery/videos" />
 <link rel="icon" href="/MEMEPEDIA-CONTENT/icon.png" type="image/png">
 <style>
 body {
