--- a/songs.html
+++ b/songs.html
@@ -6,6 +6,7 @@
   <title>Spotify Meme Songs - Memepedia: Rebirth</title>
     <meta property="og:site_name" content="Memepedia Rebirth">
 	<meta name="application-name" content="Memepedia Rebirth">
+	<link rel="canonical" href="https://memepedia.pages.dev/songs" />
 <link rel="icon" href="/MEMEPEDIA-CONTENT/icon.png" type="image/png">
   <style>
     body {
