--- a/faq.html
+++ b/faq.html
@@ -7,6 +7,7 @@
     <meta property="og:site_name" content="Memepedia Rebirth">
 	<meta name="application-name" content="Memepedia Rebirth">
 	<link rel="canonical" href="https://memepedia.pages.dev/faq" />
+	<meta name="robots" content="noindex, follow">
 <link rel="icon" href="/MEMEPEDIA-CONTENT/icon.png" type="image/png">
   <style>
     body {
