replace cuz its not good

--- a/gallery.html
+++ b/gallery.html
@@ -134,7 +134,7 @@
   <img class="meme-thumbnail" src="memes/meme20.gif" alt="Meme20" loading="lazy" data-fullsize="memes/meme20.gif">
   <img class="meme-thumbnail" src="memes/meme21.gif" alt="Meme21" loading="lazy" data-fullsize="memes/meme21.gif">
   <img class="meme-thumbnail" src="memes/meme22.gif" alt="Meme22" loading="lazy" data-fullsize="memes/meme22.gif">
-  <img class="meme-thumbnail" src="memes/meme23.gif" alt="Meme23" loading="lazy" data-fullsize="memes/meme23.gif">
+  <img class="meme-thumbnail" src="memes/meme23.png" alt="Meme23" loading="lazy" data-fullsize="memes/meme23.png">
   <img class="meme-thumbnail" src="memes/meme24.gif" alt="Meme24" loading="lazy" data-fullsize="memes/meme24.gif">
   <img class="meme-thumbnail" src="memes/meme25.gif" alt="Meme25" loading="lazy" data-fullsize="memes/meme25.gif">
   <img class="meme-thumbnail" src="memes/meme26.png" alt="Meme26" loading="lazy" data-fullsize="memes/meme26.png">
