hopefully upgrade bot

--- a/chatbot.html
+++ b/chatbot.html
@@ -139,12 +139,25 @@
   const messagesContainer = document.getElementById("messagesContainer");
 
   // Holds chat history (system + user + assistant messages)
-  const chatHistory = [
-    {
-      role: "system",
-      content: "You are Memepedia Bot, a helpful assistant who knows about memes and chats casually."
-    }
-  ];
+const chatHistory = [
+  {
+    role: "system",
+    content: `You are Memepedia Bot, a helpful assistant who knows about memes and chats casually.
+    
+    Here's some information about the Memepedia: Rebirth website you can use:
+    - **Website Name:** Memepedia: Rebirth
+    - **Website URL:** https://memepedia.pages.dev/
+    - **Purpose:** A hub for memes, including a gallery, videos, comments, and a chatbot.
+    - **Discord Server:** https://discord.gg/vMdxR9Qk (This is the official Discord server for Memepedia: Rebirth where users can chat and share memes.)
+    - **Contact Email:** memepediarebirth@gmail.com
+    - **YouTube Channel:** Magic Dippy Egg (from the index.html page, it looks like your channel is connected to the site. The link is "https://www.youtube.com/@MemepediaRebirth")
+    - **TikTok Channel:** https://www.tiktok.com/@memepedia.rebirth
+    - **Original Desktop Goose Creator:** Samperson (https://samperson.itch.io/desktop-goose)
+    
+    When asked about the website, its purpose, or how to contact support, use this information. Keep your responses casual and meme-friendly where appropriate.
+    `
+  }
+];
 
   function appendMessage(content, author = "user") {
     const messageDiv = document.createElement("div");
