they shouldnt be here anyway

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 </head>
 <body>
 
-  <h1>This the the Memepedia download server</p>
-  <p>This is where most of the files for Memepedia are stored</p>
-  <a href="https://memepedia.pages.dev/" class="button">Go To Memepedia</a>
+  <h1>Oops!</h1>
+  <p>Looks like you ended up in the wrong spot.</p>
+  <a href="https://memepedia.pages.dev/" class="button">Go Back Home</a>
 
 </body>
 </html>
