--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -204,7 +204,7 @@ footer {
     </div>
 										    <div class="video-item">
 			      <video controls>
-        <source src="https://memepedia-download.onrender.com/videos/video16.mp4" type="video/mp4">
+        <source src="https://memepedia-download.onrender.com/videos/video16.mov" type="video/mp4">
         Your browser does not support videos.
       </video>
     </div>
