--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 </main>
 
 <footer>
-  Created by Goobert, with help from Magic Dippy Egg | Memepedia: Rebirth
+  Created by Lemon Juice, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
 
 </body>
