--- a/chatbot.html
+++ b/chatbot.html
@@ -132,7 +132,7 @@
   
   
 <footer>
-  Created by Goobert, with help from Magic Dippy Egg | Memepedia: Rebirth
+  Created by Lemon Juice, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
 
 <script>
