--- a/foryou.html
+++ b/foryou.html
@@ -89,7 +89,7 @@
 </main>
 
 <footer>
-  Created by Goobert, with help from Magic Dippy Egg | Memepedia: Rebirth
+  Created by Lemon Juice, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
 
 </body>
