--- a/gallery.html
+++ b/gallery.html
@@ -161,7 +161,7 @@
 <a href="gallery/videos" class="button">Go to videos</a>
 
 <footer>
-  Created by Goobert, with help from Magic Dippy Egg | Memepedia: Rebirth
+  Created by Lemon Juice, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
 
 <script>
