update username on old website

--- a/gallery.html
+++ b/gallery.html
@@ -170,7 +170,7 @@
 <a href="gallery/videos" class="button">Go to videos</a>
 
 <footer>
-  Created by Guh, with help from Magic Dippy Egg | Memepedia: Rebirth
+  Created by Lemon Juice, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
 
 <script>
