--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -231,7 +231,7 @@ footer {
 <br><br><br><br>
 
 <footer>
-  Created by Guh, with help from Magic Dippy Egg | Memepedia: Rebirth
+  Created by Lemon Juice, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
 
 </body>
