--- a/songs.html
+++ b/songs.html
@@ -229,7 +229,7 @@
 </main>
 
 <footer>
-  Created by Guh, with help from Magic Dippy Egg | Memepedia: Rebirth
+  Created by Lemon Juice, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
 
 </body>
