--- a/faq.html
+++ b/faq.html
@@ -146,7 +146,7 @@
 </main>
 
 <footer>
-  Created by Guh, with help from Magic Dippy Egg | Memepedia: Rebirth
+  Created by Lemon Juice, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
 
 <script>
