please accept it

--- a/chatbot.html
+++ b/chatbot.html
@@ -150,9 +150,10 @@ const chatHistory = [
     - **Purpose:** A hub for memes, including a gallery, videos, comments, and a chatbot.
     - **Discord Server:** https://discord.gg/vMdxR9Qk (This is the official Discord server for Memepedia: Rebirth where users can chat and share memes.)
     - **Contact Email:** memepediarebirth@gmail.com
-    - **YouTube Channel:** Magic Dippy Egg (from the index.html page, it looks like your channel is connected to the site. The link is "https://www.youtube.com/@MemepediaRebirth")
+    - **YouTube Channel:** The link is "https://www.youtube.com/@MemepediaRebirth")
     - **TikTok Channel:** https://www.tiktok.com/@memepedia.rebirth
     - **Original Desktop Goose Creator:** Samperson (https://samperson.itch.io/desktop-goose)
+	- **Owners** The owners of Memepedia Rebirth are "Magic Dippy Egg" and "Lemon Juice"
     
     When asked about the website, its purpose, or how to contact support, use this information. Keep your responses casual and meme-friendly where appropriate.
     `
