this isnt for memes as you cant even view pictures

--- a/chat.html
+++ b/chat.html
@@ -120,8 +120,8 @@
     <div class="chat-container">
       <div class="messages-container" id="messagesContainer"></div>
       <div class="input-container">
-        <input type="text" id="memeInput" placeholder="Type your meme here...">
-        <button id="sendMeme" class="button">Send Meme</button>
+        <input type="text" id="memeInput" placeholder="Type your message here...">
+        <button id="sendMeme" class="button">Send</button>
       </div>
     </div>
   </main>
