--- a/chatbot.html
+++ b/chatbot.html
@@ -132,7 +132,7 @@
   
   
 <footer>
-  Created by Lemon Juice, with help from Magic Dippy Egg | Memepedia: Rebirth
+  Created by St1cky N0te, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
 
 <script>
@@ -153,7 +153,7 @@ const chatHistory = [
     - **YouTube Channel:** The link is "https://www.youtube.com/@MemepediaRebirth")
     - **TikTok Channel:** https://www.tiktok.com/@memepedia.rebirth
     - **Original Desktop Goose Creator:** Samperson (https://samperson.itch.io/desktop-goose)
-	- **Owners** The owners of Memepedia Rebirth are "Magic Dippy Egg" and "Lemon Juice"
+	- **Owners** The owners of Memepedia Rebirth are "Magic Dippy Egg" and "St1cky N0te"
     
     When asked about the website, its purpose, or how to contact support, use this information. Keep your responses casual and meme-friendly where appropriate.
     `
