--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
   
   <p>Join the conversation on Discord:</p>
   <p>Magic Dippy Egg: <strong>@magicdippyegg</strong></p>
-  <p>Lemon Juice: <strong>@superdino4679</strong></p>
+  <p>St1cky N0te: <strong>@superdino4679</strong></p>
 
   <a href="https://docs.google.com/forms/d/e/1FAIpQLSfSlSxoN22GNaM6ReOzaQdK8KgUvVVNXeNLmC48OXQu5O0QuQ/viewform?usp=header" class="button" target="_blank">Submit Feedback</a>
 
