--- a/faq.html
+++ b/faq.html
@@ -137,7 +137,7 @@
 </main>
 
 <footer>
-  Created by Lemon Juice, with help from Magic Dippy Egg | Memepedia: Rebirth
+  Created by St1cky N0te, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
 
 <script>
