--- a/gallery.html
+++ b/gallery.html
@@ -162,7 +162,7 @@
 <a href="gallery/videos" class="button">Go to videos</a>
 
 <footer>
-  Created by Lemon Juice, with help from Magic Dippy Egg | Memepedia: Rebirth
+  Created by St1cky N0te, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
 
 <script>
