--- a/chat.html
+++ b/chat.html
@@ -133,7 +133,7 @@
 	<br><br><br><br><br>
   
 <footer>
-  Created by Lemon Juice, with help from Magic Dippy Egg | Memepedia: Rebirth
+  Created by St1cky N0te, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
   <script>
     async function fetchMessages() {
