--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <br><br>
 
 <footer>
-  Created by Lemon Juice, with help from Magic Dippy Egg | Memepedia: Rebirth  <a href="contact" target="_blank" style="color: #ff6600;">Contact Us</a>
+  Created by St1cky N0te, with help from Magic Dippy Egg | Memepedia: Rebirth  <a href="contact" target="_blank" style="color: #ff6600;">Contact Us</a>
 </footer>
 
 </body>
