--- a/songs.html
+++ b/songs.html
@@ -220,7 +220,7 @@
 </main>
 
 <footer>
-  Created by Lemon Juice, with help from Magic Dippy Egg | Memepedia: Rebirth
+  Created by St1cky N0te, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
 
 </body>
