makin stuff better :)

--- a/comments.html
+++ b/comments.html
@@ -54,7 +54,7 @@
 </header>
 
 <main>
-  <a href="index" class="button">Back to Home</a>
+  <a href="https://memepedia.pages.dev/" class="button">Back to Home</a>
 
   <h2>Leave a Comment Below!</h2>
   
