--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
   <a href="https://docs.google.com/forms/d/e/1FAIpQLSfSlSxoN22GNaM6ReOzaQdK8KgUvVVNXeNLmC48OXQu5O0QuQ/viewform?usp=header" class="button" target="_blank">Submit Feedback</a>
 
   <br><br>
-  <a href="index" class="button">Return to Home</a>
+  <a href="https://memepedia.pages.dev/" class="button">Return to Home</a>
 
   <footer>
     <p>Thank you for reaching out to us!</p>
