--- a/support.html
+++ b/support.html
@@ -113,7 +113,7 @@
     </div>
     </div>
 
-  <a href="/index" class="button back-home-button">Go Back Home</a>
+  <a href="https://memepedia.pages.dev/" class="button back-home-button">Go Back Home</a>
 
 </main>
 
