--- a/support/old_meme_goose.html
+++ b/support/old_meme_goose.html
@@ -93,13 +93,13 @@
     <p>Thank you for your understanding and continued support!</p>
     <div style="text-align: center;">
         <a href="https://memepedia-download.onrender.com/Meme%20Goose.msi" target="_blank" class="button">Download Latest Meme Goose</a>
-        <a href="https://memepedia.pages.dev/index" class="button">Go Back Home</a>
+        <a href="https://memepedia.pages.dev/" class="button">Go Back Home</a>
     </div>
   </div>
 </main>
 
 <footer>
-  Created by Goobert, with help from Magic Dippy Egg | Memepedia: Rebirth
+  Created by St1cky N0te, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
 
 </body>
