--- a/chat.html
+++ b/chat.html
@@ -116,7 +116,7 @@
   </header>
   <main>
   
-  <a href="index" class="button">Back to Home</a>
+  <a href="https://memepedia.pages.dev/" class="button">Back to Home</a>
     <div class="chat-container">
       <div class="messages-container" id="messagesContainer"></div>
       <div class="input-container">
