--- a/chatbot.html
+++ b/chatbot.html
@@ -118,7 +118,7 @@
     <img src="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true" alt="Memepedia Logo" />
   </header>
   <main>
-    <a href="index" class="button">Back to Home</a>
+    <a href="https://memepedia.pages.dev/" class="button">Back to Home</a>
     <div class="chat-container">
       <div class="messages-container" id="messagesContainer"></div>
       <div class="input-container">
