--- a/faq.html
+++ b/faq.html
@@ -88,7 +88,7 @@
 </header>
 
 <br>
-  <a href="index" class="button">Go Back Home</a>
+  <a href="https://memepedia.pages.dev/" class="button">Go Back Home</a>
 
 <main>
   <div class="faq-item">
