--- a/gallery.html
+++ b/gallery.html
@@ -154,7 +154,7 @@
 </div>
 
 <!-- Button to go back to the home page -->
-<a href="index" class="button">Back to Home</a>
+<a href="https://memepedia.pages.dev/" class="button">Back to Home</a>
 
 <br>
 <br>
