--- a/songs.html
+++ b/songs.html
@@ -77,7 +77,7 @@
 
 <br>
 
-<a href="index" class="button">Go Back Home</a>
+<a href="https://memepedia.pages.dev/" class="button">Go Back Home</a>
 
 <main>
   <div class="spotify-embed">
