these pages have been forgotten abt

--- a/support/old_meme_goose.html
+++ b/support/old_meme_goose.html
@@ -80,7 +80,7 @@
 <body>
 
 <header>
-  <img src="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true" alt="Memepedia Icon">
+  <img src="/icon_smaller.jpg" alt="Memepedia Icon">
   <h1>Important: Reinstall Meme Goose</h1>
 </header>
 
