--- a/support.html
+++ b/support.html
@@ -93,7 +93,7 @@
 <body>
 
 <header>
-  <img src="./icon_smaller.jpg" alt="Memepedia Icon">
+  <img src="/icon_smaller.jpg" alt="Memepedia Icon">
   <h1>Memepedia Support</h1>
 </header>
 
