add submit meme button

--- a/gallery.html
+++ b/gallery.html
@@ -158,7 +158,7 @@
 
 <br>
 <br>
-
+<a href="https://forms.gle/B7nmKBurJwLeTfFEA" class="button">Sumbit Meme</a>
 <a href="gallery/videos" class="button">Go to videos</a>
 
 <footer>
