--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -243,7 +243,7 @@ footer {
 
 <br>
 <br>
-
+<a href="https://forms.gle/B7nmKBurJwLeTfFEA" class="button">Sumbit Meme</a>
 <a href="../index" class="button">Go Back Home</a>
 
 
