--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 </main>
 
 <footer>
-  Created by St1cky N0te, with help from Magic Dippy Egg | Memepedia: Rebirth
+  Created by St1cky N0te, with help from Magic Dippy Egg | Memepedia: Rebirth  <a href="https://stats.uptimerobot.com/42qKZl0zuq" target="_blank" style="color: #ff6600;">Status Page</a>
 </footer>
 
 </body>
