--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
 </main>
 
 <footer>
-  Created by Lemon Juice, with help from Magic Dippy Egg | Memepedia: Rebirth
+  Created by Lemon Juice, with help from Magic Dippy Egg | Memepedia: Rebirth  <a href="https://stats.uptimerobot.com/42qKZl0zuq" target="_blank" style="color: #ff6600;">Status Page</a>
 </footer>
 
 </body>
