--- a/chat.html
+++ b/chat.html
@@ -126,7 +126,7 @@
     </div>
   </main>
   
-    <h2>This page is linked to the #general section of the discord server</h2>
+    <h2>Messages here are synced with the #general Discord channel.</h2>
 	
 	<iframe src="https://discord.com/widget?id=1359467119355494442&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 	
