--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 <footer>
   Created by St1cky N0te, with help from Magic Dippy Egg | Memepedia: Rebirth  <a href="contact" target="_blank" style="color: #ff6600;">Contact Us</a>
 </footer>
-
+<script data-goatcounter="https://magicdippyegg.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
