--- a/about.html
+++ b/about.html
@@ -67,6 +67,7 @@
 <footer>
   Created by St1cky N0te, with help from Magic Dippy Egg | Memepedia: Rebirth  <a href="https://stats.uptimerobot.com/42qKZl0zuq" target="_blank" style="color: #ff6600;">Status Page</a>
 </footer>
-
+<script data-goatcounter="https://magicdippyegg.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
