--- a/chatbot.html
+++ b/chatbot.html
@@ -220,5 +220,7 @@ const chatHistory = [
     if (e.key === "Enter") sendMessage();
   });
 </script>
+<script data-goatcounter="https://magicdippyegg.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
