--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -252,6 +252,7 @@ footer {
 <footer>
   Created by St1cky N0te, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
-
+<script data-goatcounter="https://magicdippyegg.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
