--- a/chat.html
+++ b/chat.html
@@ -289,5 +289,7 @@
     fetchMessages();
     setInterval(fetchMessages, 3000);
   </script>
+  <script data-goatcounter="https://magicdippyegg.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
