--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,7 @@
   <footer>
     <p>Thank you for reaching out to us!</p>
   </footer>
-
+<script data-goatcounter="https://magicdippyegg.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
