--- a/faq.html
+++ b/faq.html
@@ -156,6 +156,7 @@
     });
   });
 </script>
-
+<script data-goatcounter="https://magicdippyegg.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
